--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -29,6 +29,8 @@
 
         <activity android:name=".matrix.MatrixGameActivity"
             android:screenOrientation="portrait" />
+        <activity android:name=".refreshcomponent.YNRefreshFrameLayoutTestActivity"
+            android:screenOrientation="portrait" />
     </application>
 
 </manifest>
