--- a/gradle/wrapper/gradle-wrapper.properties
+++ b/gradle/wrapper/gradle-wrapper.properties
@@ -1,6 +1,7 @@
-#Wed Sep 21 16:20:30 CST 2016
+#Thu Aug 24 08:55:37 CST 2017
 distributionBase=GRADLE_USER_HOME
 distributionPath=wrapper/dists
 zipStoreBase=GRADLE_USER_HOME
 zipStorePath=wrapper/dists
-distributionUrl=https\://services.gradle.org/distributions/gradle-2.14.1-all.zip
+distributionUrl=file\:/E\:/DevelopTools/gradle/gradle-3.3-all.zip
+#distributionUrl=https\://services.gradle.org/distributions/gradle-3.2-all.zip
